<resources>
    <string name="app_name">Gradit</string>
    <string name="loginPage"><u>Login Page</u>
    </string>
    <string name="forgotpassword"><u>Forgot Password?</u>
    </string>
    <string name="txt_devicetype">Android</string>
    <string name="txt_version_code">Version 4.0</string>
    <string name="txt_network">Not Connected to Network</string>
    <string name="txt_error_msg">Error Message…</string>
    <string name="txt_Ok">OK</string>
    <string name="txt_enter_otp">Enter otp</string>
    <string name="txt_success">Success</string>
    <string name="txt_failed">Failed</string>
    <string name="txt_update">Update</string>
    <string name="txt_update_available">New Update Available</string>
    <string name="txt_Alert_Add_member">Are you sure.Do you want to add this member?</string>
    <string name="txt_Reconfirm">Reconfirm</string>
    <string name="txt_Yes">Yes</string>
    <string name="txt_No">No</string>
    <string name="txt_back">Back</string>
    <string name="txt_Color_alert">#FFFFF</string>
    <string name="txt_playstore_url">https://play.google.com/store/apps/details?id=com.vsca.vsnapvoicecollege</string>
    <string name="txt_login_details">Please Enter Login details</string>
    <string name="txt_accept_terms_and_condition">Accept Terms And Condition</string>
    <string name="txt_choose_your_Country">Where is your college located ?</string>
    <string name="txt_enter_mobile_no">Enter Mobile No</string>
    <string name="txt_proceed_with_your">Proceed with Your</string>
    <string name="txt_login">Login</string>
    <string name="txt_dont_receive_code">Dont receive code?</string>
    <string name="txt_resend_code_again">Resend Code again</string>
    <string name="txt_get_otp">GET OTP</string>
    <string name="txt_enter_password">Enter password</string>
    <string name="txt_close">close</string>
    <string name="txt_choose_your_login_type">Choose your login type :</string>
    <string name="txt_logout">Log out</string>
    <string name="txt_color_prinicpal">#902476</string>
    <string name="txt_clr_staff">#006a88</string>
    <string name="clr_student_selectedTab">#254b7a</string>
    <string name="clr_student_unselectedTab">#748dab</string>
    <string name="clr_prinicpal_selected">#a15492</string>
    <string name="clr_unselected">#F1EFEF</string>
    <string name="clr_selected">#B4B4B3</string>
    <string name="clr_principal_unselected">#d69acb</string>
    <string name="clr_teachingstaff_selected">#006a88</string>
    <string name="clr_teachingstaff_unselected">#FF71B2C5</string>
    <string name="clr_parent_selected">#3C61E6</string>
    <string name="clr_parent_unselected">#99acf0</string>
    <string name="txt_color_receiver">#0f2239</string>
    <string name="txt_color_parent">#2F4C93</string>
    <string name="txt_color_white">#FFFFFFFF</string>
    <string name="txt_color_lightorang">#B87677</string>
    <string name="lbl_clr_red">#FF7575</string>
    <string name="lbl_clr_white">#FFFFFF</string>
    <string name="txt_submissionon">Submission On</string>
    <string name="txt_assignmenttype">Assignment Type</string>
    <string name="txt_student">Student</string>
    <string name="txt_parent">Parent</string>
    <string name="txt_emergency_notification">Emergency Notification</string>
    <string name="txt_circular">Circular</string>
    <string name="txt_assignment">Assignment</string>
    <string name="txt_events">Events</string>
    <string name="txt_exam">Exam</string>
    <string name="txt_upcoming">Upcoming</string>
    <string name="txt_unread">Unread</string>
    <string name="txt_read">Read</string>
    <string name="txt_past">Past</string>
    <string name="txt_communication">Communication</string>
    <string name="txt_message">Message</string>
    <string name="txt_Video">Video</string>
    <string name="txt_recent_notification">Recent Notification</string>
    <string name="txt_advertisement">Advertisement</string>
    <string name="txt_ad">Ad</string>
    <string name="txt_notice_board">Notice Board</string>
    <string name="txt_attendance">Attendance</string>
    <string name="txt_leave_history">Leave History</string>
    <string name="txt_faculty">Faculty</string>
    <string name="txt_subject_handled">Subject Handled</string>
    <string name="txt_staff_type">Type</string>
    <string name="txt_change_roles">Change Roles</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_faq">FAQ</string>
    <string name="txt_help">Help</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_clear_cache">Clear Cache</string>
    <string name="txt_terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="txt_alert_logout">Are you sure do you want to logout</string>
    <string name="txt_voice_message">Voice Message</string>
    <string name="txt_view_all">View all</string>
    <string name="txt_subject_name">Subject Name</string>
    <string name="txt_Department_name">Department Name</string>
    <string name="txt_Course_name">Course</string>
    <string name="txt_subject_type">Type</string>
    <string name="txt_Year_type">Year / Semester</string>
    <string name="txt_subject_category">Category</string>
    <string name="txt_Semester_category">Semester</string>
    <string name="txt_subject_credits">Credits</string>
    <string name="txt_Section_credits">Section</string>
    <string name="txt_subject_code">Code</string>
    <string name="txt_subject_requirement">Requirement</string>
    <string name="txt_semester">Semester</string>
    <string name="txt_fee_amount">Fee Amount</string>
    <string name="txt_logout_alert">Are you sure do you want to logout</string>
    <string name="txt_course_details">Course Details</string>
    <string name="txt_exam_app_details">Exam Application Details</string>
    <string name="txt_no_record_found">No Records Found</string>
    <string name="txt_college">College</string>
    <string name="txt_no_data_found">No Data Found</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_submition">Submission</string>
    <string name="txt_prev_submission">View your submission</string>
    <string name="txt_play_voice">Play</string>
    <string name="txt_view">View</string>
    <string name="txt_event_details">Event Details</string>
    <string name="txt_finan_accound">Finance and Accounding</string>
    <string name="txt_Testing_exam_creation">Testing exam creation</string>
    <string name="txt_voie_communication">New Communication</string>
    <string name="txt_new_img_pdf">New Image/Pdf</string>
    <string name="txt_new_text">New Text</string>
    <string name="txt_assignmentfile">Assignment File</string>
    <string name="txt_Create_examination">Create Examination</string>
    <string name="txt_exam_list">Exam List</string>
    <string name="txt_Confirm">Confirm</string>
    <string name="txt_testing_exam_creating">Testing exam creation</string>
    <string name="txt_Exam_name">Exam Name</string>
    <string name="txt_Enter_the_exam_name">Enter the exam name</string>
    <string name="txt_get_section_subject">Get Section / Subject</string>
    <string name="txt_new_video">New Video</string>
    <string name="txt_new_assignment">New Assignment</string>
    <string name="txt_new_noticeboard">New Noticeboard</string>
    <string name="txt_exam_venue">Venue</string>
    <string name="txt_exam_syllabus">Syllabus</string>
    <string name="txt_upload_files">Upload Files</string>
    <string name="txt_upload_Video">Upload Video</string>
    <string name="txt_Name">Name</string>
    <string name="txt_Marks">Marks</string>
    <string name="txt_play_video">Play Video</string>
    <string name="txt_no_images_uploaded_for_this_event">No Images Uploaded for this Event</string>
    <string name="txt_title">Title</string>
    <string name="txt_enter_the_title">Enter the title</string>
    <string name="txt_description">Description</string>
    <string name="txt_please_note_this_voice">Please note that this message will be delivered to App</string>
    <string name="txt_enter_the_voice_title">Enter the voice title</string>
    <string name="txt_selected_category">-- Selected Category --</string>
    <string name="txt_selected_semester">-- Selected Semester --</string>
    <string name="txt_selected_section">-- Selected Section --</string>
    <string name="txt_category_credit_points">Category Credit Points</string>
    <string name="txt_semester_credit_points">Semester Credit Points</string>
    <string name="txt_category">Category</string>
    <string name="txt_obtained">Obtained</string>
    <string name="txt_to_be_obtained">To be Obtained</string>
    <string name="txt_total_credits">Total Credits</string>
    <string name="txt_select_semester">-- Select Semester --</string>
    <string name="txt_select_semesternow">Select Semester</string>
    <string name="txt_attachment">Attachment</string>
    <string name="txt_attanace_no_data">Today\'s attendance is not yet available</string>
    <string name="txt_select_country">-- Select Country --</string>
    <string name="txt_no_of_days">No.of days : </string>
    <string name="txt_seleted_division">Select Division</string>
    <string name="txt_seletedtype">Selected Type</string>
    <string name="txt_selete_department">Selete Department</string>
    <string name="txt_selete_course">Selete Course</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="txt_select_year">Select Year</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_Delete">Delete</string>
    <string name="txt_no_attendance_available">Still Attendance not taken for this date</string>
    <string name="txt_leave_type">Leave Type</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_Send">Send</string>
    <string name="txt_reason">Reason</string>
    <string name="txt_old_password">Old Password</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="lbl_enter_oldpassword">Enter Your Old Password</string>
    <string name="lbl_enter_new_password">Enter Your New Password</string>
    <string name="lbl_confim_password">Enter Your  Confirm Password</string>
    <string name="lbl_similar_password">Old password And New Password are Similar</string>
    <string name="lbl_pswrd_not_match">Your Password Doesn\'t match</string>
    <string name="txt_img_pdf">Image/Pdf</string>
    <string name="txt_select_date">Select Date</string>
    <string name="txt_event_date">Event Date</string>
    <string name="selected">selected</string>
    <string name="album_view">Select photo album</string>
    <string name="txt_Lable_Swipe_down">Swipe down to load previous messages</string>
    <string name="Attendance_Lable">Marked Students will be considered as PRESENT</string>
    <string name="image_view">Tap to select images</string>
    <string name="add">ADD</string>
    <string name="limit_exceeded">You Can select %d image only</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
    <string name="next">NEXT</string>
    <string name="txt_select_recipients">Select Recipients</string>
    <string name="lb_please_allow_gallery_permission">please allow gallery permission</string>
</resources>