<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:layout_width="@dimen/one_sixty"
        android:layout_height="@dimen/one_sixty"
        android:id="@+id/imglogo"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        android:layout_marginTop="@dimen/fourty"
        android:src="@drawable/gradit_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_proceed_with_your"
        android:id="@+id/lblProceed"
        android:textSize="@dimen/twenty_three"
        app:layout_constraintTop_toBottomOf="@id/imglogo"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        app:layout_constraintStart_toStartOf="parent"        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblProceed"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/txt_login"
        android:textSize="@dimen/twenty_five"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/lblLogin"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblLogin"
        android:layout_marginTop="@dimen/thirty"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/txt_enter_mobile_no"
        android:textStyle="bold"
        android:textSize="@dimen/eighteen"
        android:textColor="@color/black"
        android:id="@+id/lblmobilenumber">
    </TextView>
    <EditText
        android:id="@+id/edMobilenumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_five"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        android:hint="999 999 9999"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="@dimen/eight"
        android:paddingBottom="@dimen/three"
        android:paddingTop="@dimen/three"
        android:paddingEnd="@dimen/eighteen"
        android:textColorHint="@color/clr_txt_grey_light"
        android:textSize="@dimen/fifteen"
        app:layout_constraintTop_toBottomOf="@id/lblmobilenumber"
        app:layout_constraintLeft_toLeftOf="@id/lblLogin"
        android:drawableRight="@drawable/ic_mail"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edMobilenumber"
        android:layout_marginTop="@dimen/ten"
        app:layout_constraintLeft_toLeftOf="@id/lblmobilenumber"
        android:text="@string/txt_enter_otp"
        android:textStyle="bold"
        android:textSize="@dimen/eighteen"
        android:textColor="@color/black"
        android:id="@+id/lblEnterOTP"
        />
    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_five"
        android:layout_marginTop="@dimen/eight"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        android:hint="*****"
        android:paddingStart="@dimen/eight"
        android:paddingBottom="@dimen/three"
        android:paddingTop="@dimen/three"
        android:paddingEnd="@dimen/eighteen"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textColorHint="@color/clr_txt_grey_light"
        android:textSize="@dimen/fifteen"
        app:layout_constraintTop_toBottomOf="@id/lblEnterOTP"
        app:layout_constraintLeft_toLeftOf="@id/lblLogin"
        android:drawableRight="@drawable/ic_lock"
        />
    <TextView
        android:id="@+id/lblDontRecieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        app:layout_constraintLeft_toLeftOf="@id/edPassword"
        android:text="@string/txt_dont_receive_code"
        android:layout_marginTop="@dimen/eight"
        android:textColor="@color/black"
        android:layout_marginLeft="@dimen/twenty_five"
        android:textStyle="normal"
        android:textAlignment="center"
        android:textSize="@dimen/thirteen"
        >
    </TextView>

    <TextView
        android:id="@+id/lblResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        app:layout_constraintLeft_toRightOf="@+id/lblDontRecieve"
        android:text="@string/txt_resend_code_again"
        android:layout_marginTop="@dimen/five"
        android:textStyle="bold"
        android:textSize="@dimen/fifteen"
        android:visibility="visible"
        android:textColor="@color/black"
        >
    </TextView>
        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty_five"
        android:textColor="@color/white"
        android:text="Continue"
        android:textStyle="bold"
        android:background="@drawable/bg_btn_green"
        app:layout_constraintTop_toBottomOf="@id/edPassword"
        android:layout_marginTop="@dimen/eighty"
        android:layout_marginRight="@dimen/twenty_five"
        android:layout_marginLeft="@dimen/twenty_five"
        android:id="@+id/btnContinue"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginPage"
        android:layout_marginTop="@dimen/twenty"
        android:id="@+id/lblforgotPassword"
        android:textStyle="normal"
        android:textSize="@dimen/eighteen"
        android:textColor="@color/clr_light_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnContinue"
        >
    </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>