<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >

    <ImageView
        android:id="@+id/ImgSplashlog"
        android:layout_width="@dimen/one_sixty"
        android:layout_height="@dimen/one_sixty"
        android:layout_marginStart="@dimen/fourty_five"
        android:layout_marginTop="@dimen/hundred"
        android:background="@color/white"
        android:src="@drawable/gradit_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_proceed_with_your"
        android:textSize="@dimen/twenty"
        app:layout_constraintLeft_toLeftOf="@id/ImgSplashlog"
        app:layout_constraintTop_toBottomOf="@id/ImgSplashlog">
    </TextView>
    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty_five"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/lblProceed"
        app:layout_constraintTop_toBottomOf="@id/lblProceed">

    </TextView>

    <TextView
        android:id="@+id/lblmobilenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty"
        android:text="@string/txt_enter_mobile_no"
        android:textColor="@color/black"
        android:textSize="@dimen/twenty"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/lblLogin"
        app:layout_constraintTop_toBottomOf="@id/lblLogin">

    </TextView>

    <EditText
        android:id="@+id/edMobilenumber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:layout_marginStart="@dimen/fourty_five"
        android:layout_marginEnd="@dimen/fourty_five"
        android:layout_marginTop="@dimen/ten"
        android:drawableRight="@drawable/ic_mail"
        android:hint="999 999 9999"
        android:inputType="number"
        android:maxLength="10"
        android:paddingStart="@dimen/eight"
        android:paddingTop="@dimen/three"
        android:paddingEnd="@dimen/eighteen"
        android:paddingBottom="@dimen/three"
        android:textColorHint="@color/clr_txt_grey_light"
        android:textSize="@dimen/fifteen"
        app:layout_constraintLeft_toLeftOf="@id/lblmobilenumber"
        app:layout_constraintTop_toBottomOf="@id/lblmobilenumber" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOtp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fourty"
        android:layout_marginStart="@dimen/fourty_five"
        android:layout_marginTop="@dimen/seventy"
        android:layout_marginEnd="@dimen/fourty_five"
        android:background="@drawable/bg_btn_green"
        android:text="@string/txt_get_otp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/edMobilenumber"
        app:layout_constraintTop_toBottomOf="@id/edMobilenumber">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/lblforgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/loginPage"
        android:textSize="@dimen/seven"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOtp">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>