<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/OverallLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/clr_bg_grey_light"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutTablesCatSem"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent">


                    <TableLayout
                        android:id="@+id/LayoutSemesterTable"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/fifty"
                        android:stretchColumns="1"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/fifty">


                            <TextView
                                android:id="@+id/lblSemesterSem"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/fifty"
                                android:layout_weight="1"
                                android:background="@drawable/bg_table_header"
                                android:gravity="center"
                                android:text="@string/txt_semester"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintLeft_toRightOf="@+id/lblCategory">

                            </TextView>

                            <TextView
                                android:id="@+id/lblObtainedsem"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/fifty"
                                android:layout_weight="1"
                                android:background="@drawable/bg_table_header"
                                android:gravity="center"
                                android:text="@string/txt_obtained"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toRightOf="@+id/lblSemesterSem"
                                app:layout_constraintTop_toTopOf="parent">

                            </TextView>

                            <TextView
                                android:id="@+id/lblTobeObtainedsem"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/fifty"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="@drawable/bg_table_header"
                                android:gravity="center"
                                android:text="@string/txt_to_be_obtained"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@+id/lblObtainedsem"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintWidth_percent=".5" />

                            <TextView
                                android:id="@+id/lblTotalCreditsSem"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/fifty"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="@drawable/bg_table_header"
                                android:gravity="center"
                                android:text="@string/txt_total_credits"
                                android:textSize="@dimen/fourteen"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toRightOf="@+id/lblTobeObtainedsem"
                                app:layout_constraintTop_toTopOf="parent" />
                        </TableRow>
                    </TableLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRVCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/layoutTablesCatSem" />

                <TextView
                    android:id="@+id/lblNoRecordsFound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="70dp"
                    android:gravity="center"
                    android:text="@string/txt_no_data_found"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>